syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "buf/validate/validate.proto";

option java_package = "com.ki.events";
option java_outer_classname = "EventsProto";

package com.ki.events;

service EventService {
  rpc AddEvent (AddEventRequest) returns (AddEventReply) {}
  rpc GetEvents (GetEventsRequest) returns (GetEventsReply) {}
  rpc GetEventsStreaming (GetEventsRequest) returns (stream Event) {}
}

message GetEventsRequest {
  EventFilter filters = 1;
  optional int32 sequence_id = 2;
  optional int32 max = 3;
}

message EventFilter {
  repeated EventType type = 1;
}

message GetEventsReply {
  repeated Event events = 1;
}

message Event {
  string source = 1;
  string aggregate = 2;
  string version = 3;
  google.protobuf.Timestamp  client_created = 4;
  google.protobuf.Timestamp  server_created = 5;
  EventType type = 6;
  int32 sequence = 7;
  Data data = 8;
  string someDeprecatedField = 9 [deprecated = true];
}


message AddEventRequest {
  string aggregate_id = 1;
  string version = 2;
  EventType type = 3;
  string source = 4;
  Data data = 5;
  optional string event_id_override = 6; //(option) .automated validation;   // nullable
}

message AddEventReply {
  Status status = 1;
  optional int32 sequence_id = 2;    // nullable
  google.protobuf.Timestamp timestamp = 3;

  enum Status {
    UNSPECIFIED = 0;
    CREATED = 1;
    ALREADY_CREATED = 2;
    CONFLICT = 3;
    //  OLD_FAILED = 4;
    reserved 4;
    FAILED = 5;
  }
}

enum EventType {
  UNSPECIFIED = 0;
  RISK_SAVED = 1;
  QUOTE_GENERATED = 2;
}

message Data {
  oneof data {
    RiskSavedData risk_saved_data = 1;
    QuoteGeneratedData quote_generated_data = 2;
  }
}

message RiskSavedData {
  string field_1 = 1 [(buf.validate.field).string.min_len = 1];
  int32 field_2 = 2;
}

message QuoteGeneratedData {
  string field_1 = 1;
  int32 field_2 = 2;
}
